--- a/template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}-bundle-cd-prod.yml.tmpl
+++ b/template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}-bundle-cd-prod.yml.tmpl
@@ -25,7 +25,7 @@ env:
 
 jobs:
   prod:
-    concurrency: {{ .input_project_name }}-prod-bundle-job
+    concurrency: {{ .input_project_name }}-prod-bundle-jo
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
