--- a/template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}-bundle-cd-staging.yml.tmpl
+++ b/template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}-bundle-cd-staging.yml.tmpl
@@ -25,7 +25,7 @@ env:
 
 jobs:
   staging:
-    concurrency: {{ .input_project_name }}-staging-bundle-jo
+    concurrency: {{ .input_project_name }}-staging-bundle-job
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
