--- a/template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}-bundle-ci.yml.tmpl
+++ b/template/{{.input_root_dir}}/.github/workflows/{{.input_project_name}}-bundle-ci.yml.tmpl
@@ -72,7 +72,7 @@ jobs:
             })
 
   prod:
-    concurrency: {{ .input_project_name }}-prod-bundle-job
+    concurrency: {{ .input_project_name }}-prod-bundle-jo
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
